<?xml version="1.0"?>
<package format="2">
  <name>spiral_search_example_ros2</name>
  <version>0.1.0</version>
  <description>Example conntask: spiral search example application executed in ros2.</description>

  <maintainer email="john.bonnin@swri.org">John Bonnin</maintainer>
  <maintainer email="lcbw@swri.org">Lily Baye-Wallace</maintainer>
  <maintainer email="josh.langsfeld@swri.org">Josh Langsfeld</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
<!--  <depend>tf_transformations</depend>-->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
<!--  <exec_depend>joint_state_publisher</exec_depend>-->
<!--  <exec_depend>robot_state_publisher</exec_depend>-->
  <depend>conntact</depend>
  <exec_depend>ur_description</exec_depend>
<!--  <exec_depend>urdf</exec_depend>-->
<!--  <exec_depend>xacro</exec_depend>-->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
